# cookiecutter-cmake

./: .gitignore  LICENSE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md  run.sh
{{cookiecutter.project_slug}}/include/: CMakeLists.txt  {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp  {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  test-main.cpp  test-{{ cookiecutter.project_slug }}.cpp
